syntax = "proto3";

package consumer;

option java_package = "msgQ.consumer";
option java_outer_classname = "MessagePushProto";

service MessagePush {
    rpc PushMsg (ConsumerRecordReq) returns (RecordReply) {}
}

message ConsumerRecordReq {
    string uuid = 1;
    string topic = 2;
    string message = 3;
}

message RecordReply {
    string uuid = 1;
    string message = 2;
    int32 code = 3;
}